package com.zaozhuang.newborn.adapter;

/**
 * Created by timaimee on 2016/7/25.
 */
public interface OnRecycleViewClickCallback {
    void OnRecycleViewClick(int position);
}
